* Added Slack channel signup information

--- a/content/themes/futura - 1.4/partials/sidebar.hbs
+++ b/content/themes/futura - 1.4/partials/sidebar.hbs
@@ -8,6 +8,6 @@
 	{{!> widget-facebook}}
 	{{!> widget-twitter}}
 	{{!> widget-google-plus}}
-	{{!> widget-text}}
+	{{> widget-text}}
 </div>
 <!-- end sidebar -->
