* Updated text widget with Polly description

--- a/content/themes/futura - 1.4/partials/widget-text.hbs
+++ b/content/themes/futura - 1.4/partials/widget-text.hbs
@@ -1,8 +1,13 @@
 <!-- start widget -->
 <div class="widget">
-	<h4 class="title">Polly Slack Channel</h4>
+	<h4 class="title">What is Polly?</h4>
 	<div class="content">
-		Join Polly on Slack!
+		<p>
+			Polly is a .NET 3.5 / 4.0 / 4.5 / PCL library that allows developers to express transient exception and fault handling policies such as Retry, Retry Forever, Wait and Retry or Circuit Breaker in a fluent manner.
+		</p>
+		<p>
+			Join Polly on Slack!
+		</p>
 		<p>
 			<script async defer src="https://pollytalk.org/slackin.js?large"></script>
 		</p>
