* Added github links

--- a/content/themes/futura - 1.4/partials/widget-text.hbs
+++ b/content/themes/futura - 1.4/partials/widget-text.hbs
@@ -3,7 +3,7 @@
 	<h4 class="title">What is Polly?</h4>
 	<div class="content">
 		<p>
-			Polly is a .NET 3.5 / 4.0 / 4.5 / PCL library that allows developers to express transient exception and fault handling policies such as Retry, Retry Forever, Wait and Retry or Circuit Breaker in a fluent manner.
+			<a href="https://github.com/App-vNext/Polly" target="_blank">Polly</a> is a .NET 3.5 / 4.0 / 4.5 / PCL library that allows developers to express transient exception and fault handling policies such as Retry, Retry Forever, Wait and Retry or Circuit Breaker in a fluent manner.
 		</p>
 		<p>
 			Join Polly on Slack!
