* Fixed slack sign-in url

--- a/content/themes/futura - 1.4/partials/widget-text.hbs
+++ b/content/themes/futura - 1.4/partials/widget-text.hbs
@@ -9,7 +9,7 @@
 			Join Polly on Slack!
 		</p>
 		<p>
-			<script async defer src="https://pollytalk.org/slackin.js?large"></script>
+			<script async defer src="http://pollytalk.org/slackin.js?large"></script>
 		</p>
 	</div>
 </div>
