* Fixed LinkedIn article share link

--- a/content/themes/futura - 1.4/partials/share_links.hbs
+++ b/content/themes/futura - 1.4/partials/share_links.hbs
@@ -17,6 +17,6 @@
 	</li>
 	<!-- linkedin -->
 	<li>
-		<a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@blog.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fa fa-linkedin"></i></a>
+		<a href="https://www.linkedin.com/shareArticle?mini=true&amp;url={{url absolute="true"}}&amp;source={{@blog.url}}&amp;title={{encode title}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fa fa-linkedin"></i></a>
 	</li>
 </ul>
