--- a/content/themes/futura - 1.4/partials/header.hbs
+++ b/content/themes/futura - 1.4/partials/header.hbs
@@ -5,7 +5,7 @@
 			<div class="col-sm-12">
 				<!-- start logo -->
 				{{#if @blog.logo}}
-				<a class="branding" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}"></a><br />
+				<a class="branding" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}"></a><br /><br />
 				<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
 				{{else}}
 				<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
